docs/output.css
/* ... */
.focus\:outline-none:focus {
  outline: 2px solid transparent;
  outline-offset: 2px;
}

@media (min-width: 1300px) {
  .desktop\:my-0 {
    margin-top: 0px;
    margin-bottom: 0px;
  }

  .desktop\:mb-0 {
    margin-bottom: 0px;
  }

  .desktop\:mt-10 {
    margin-top: 2.5rem;
  }

  .desktop\:mt-20 {
    margin-top: 5rem;
  }

  .desktop\:block {
    display: block;
  }

  .desktop\:flex {
    display: flex;
  }

  .desktop\:grid {
    display: grid;
  }

  .desktop\:hidden {
    display: none;
  }

  .desktop\:h-full {
    height: 100%;
  }

  .desktop\:h-max {
    height: -moz-max-content;
    height: max-content;
  }

  .desktop\:h-10 {
    height: 2.5rem;
  }

  .desktop\:h-12 {
    height: 3rem;
  }

  .desktop\:w-2\/3 {
    width: 66.666667%;
  }

  .desktop\:w-fit {
    width: -moz-fit-content;
    width: fit-content;
  }

  .desktop\:w-full {
    width: 100%;
  }

  .desktop\:min-w-50vw {
    min-width: 50vw;
  }

  .desktop\:max-w-550px {
    max-width: 550px;
  }

  .desktop\:max-w-newsletterWidth {
    max-width: 430px;
  }

  .desktop\:scale-125 {
    --tw-scale-x: 1.25;
    --tw-scale-y: 1.25;
    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
  }

  .desktop\:grid-cols-3 {
    grid-template-columns: repeat(3, minmax(0, 1fr));
  }

  .desktop\:flex-row {
    flex-direction: row;
  }

  .desktop\:flex-row-reverse {
    flex-direction: row-reverse;
  }

  .desktop\:flex-col {
    flex-direction: column;
  }

  .desktop\:items-start {
    align-items: flex-start;
  }

  .desktop\:items-end {
    align-items: flex-end;
  }

  .desktop\:items-center {
    align-items: center;
  }

  .desktop\:justify-start {
    justify-content: flex-start;
  }

  .desktop\:justify-between {
    justify-content: space-between;
  }

  .desktop\:gap-10 {
    gap: 2.5rem;
  }

  .desktop\:gap-5 {
    gap: 1.25rem;
  }

  .desktop\:border-t-0 {
    border-top-width: 0px;
  }

  .desktop\:px-10 {
    padding-left: 2.5rem;
    padding-right: 2.5rem;
  }

  .desktop\:px-generalSidePaddingDesktop {
    padding-left: 10rem;
    padding-right: 10rem;
  }

  .desktop\:px-20 {
    padding-left: 5rem;
    padding-right: 5rem;
  }

  .desktop\:px-5 {
    padding-left: 1.25rem;
    padding-right: 1.25rem;
  }

  .desktop\:py-3 {
    padding-top: 0.75rem;
    padding-bottom: 0.75rem;
  }

  .desktop\:py-0 {
    padding-top: 0px;
    padding-bottom: 0px;
  }

  .desktop\:pb-24 {
    padding-bottom: 6rem;
  }

  .desktop\:pb-5 {
    padding-bottom: 1.25rem;
  }

  .desktop\:pb-6 {
    padding-bottom: 1.5rem;
  }

  .desktop\:pb-8 {
    padding-bottom: 2rem;
  }

  .desktop\:pl-20 {
    padding-left: 5rem;
  }

  .desktop\:pl-generalSidePaddingDesktop {
    padding-left: 10rem;
  }

  .desktop\:pr-generalSidePaddingDesktop {
    padding-right: 10rem;
  }

  .desktop\:pt-16 {
    padding-top: 4rem;
  }

  .desktop\:text-center {
    text-align: center;
  }

  .desktop\:text-start {
    text-align: start;
  }

  .desktop\:text-18px {
    font-size: 18px;
  }
}

